rework village founding quests

--- a/resources/assets/vsvillage/lang/en.json
+++ b/resources/assets/vsvillage/lang/en.json
@@ -13,6 +13,20 @@
     "item-creature-humanoid-villager-female-mayor": "Mayor (female)",
     "item-creature-humanoid-villager-male-trader": "Trader (male)",
     "item-creature-humanoid-villager-female-trader": "Trader (female)",
+    "item-dead-creature-humanoid-villager-male-soldier": "Dead Soldier (male)",
+    "item-dead-creature-humanoid-villager-female-soldier": "Dead Soldier (female)",
+    "item-dead-creature-humanoid-villager-male-smith": "Dead Smith (male)",
+    "item-dead-creature-humanoid-villager-female-smith": "Dead Smith (female)",
+    "item-dead-creature-humanoid-villager-male-farmer": "Dead Farmer (male)",
+    "item-dead-creature-humanoid-villager-female-farmer": "Dead Farmer (female)",
+    "item-dead-creature-humanoid-villager-male-shepherd": "Dead Shepherd (male)",
+    "item-dead-creature-humanoid-villager-female-shepherd": "Dead Shepherd (female)",
+    "item-dead-creature-humanoid-villager-male-herbalist": "Dead Herbalist (male)",
+    "item-dead-creature-humanoid-villager-female-herbalist": "Dead Herbalist (female)",
+    "item-dead-creature-humanoid-villager-male-mayor": "Dead Mayor (male)",
+    "item-dead-creature-humanoid-villager-female-mayor": "Dead Mayor (female)",
+    "item-dead-creature-humanoid-villager-male-trader": "Dead Trader (male)",
+    "item-dead-creature-humanoid-villager-female-trader": "Dead Trader (female)",
 
     "block-workstation-soldier-*": "Workstation (soldier)",
     "block-workstation-smith-*": "Workstation (smith)",
@@ -81,31 +95,37 @@
     
     "quest-recruit1farmer-title": "More farmers on the fields",
     "quest-recruit1farmer-desc": "If you can provide shelter, a workplace and a little bit of payment, I am able to recruit one more farmer to the village.",
-    "quest-recruit1farmer-obj": "Rusty gears: {0}/4",
+    "quest-recruit1farmer-obj": "Rusty gears: {0}/4\nWorksations placed: {1}/1\nBeds placed: {2}/1",
     "quest-recruit1shepherd-title": "More shepherds caring for the cattle",
     "quest-recruit1shepherd-desc": "If you can provide shelter, a workplace  and a little bit of payment, I am able to recruit one more shepherd to the village.",
-    "quest-recruit1shepherd-obj": "Rusty gears: {0}/4",
+    "quest-recruit1shepherd-obj": "Rusty gears: {0}/4\nWorksations placed: {1}/1\nBeds placed: {2}/1",
     "quest-recruit1soldier-title": "More protectors for the village",
     "quest-recruit1soldier-desc": "If you can provide shelter, a workplace and a little bit of payment, I am able to recruit one more soldier to the village.",
-    "quest-recruit1soldier-obj": "Rusty gears: {0}/8",
+    "quest-recruit1soldier-obj": "Rusty gears: {0}/8\nWorksations placed: {1}/1\nBeds placed: {2}/1",
     "quest-recruit1smith-title": "More smiths creating tools and weapons",
     "quest-recruit1smith-desc": "If you can provide shelter, a workplace and a little bit of payment, I am able to recruit a smith to the village.",
-    "quest-recruit1smith-obj": "Rusty gears: {0}/6",
+    "quest-recruit1smith-obj": "Rusty gears: {0}/6\nWorksations placed: {1}/1\nBeds placed: {2}/1",
+    "quest-recruit1herbalist-title": "More healers for the wounded",
+    "quest-recruit1herbalist-desc": "If you can provide shelter, a workplace and a little bit of payment, I am able to recruit a herbalist to the village.",
+    "quest-recruit1herbalist-obj": "Rusty gears: {0}/6\nWorksations placed: {1}/1\nBeds placed: {2}/1",
+    "quest-recruit1trader-title": "The art of the trade",
+    "quest-recruit1trader-desc": "If you can provide shelter, a workplace and a little bit of payment, I am able to recruit a trader to the village.",
+    "quest-recruit1trader-obj": "Rusty gears: {0}/6\nWorksations placed: {1}/1\nBeds placed: {2}/1",
     "quest-foundvillage-start-title": "Civilization has been broken",
     "quest-foundvillage-start-desc": "Greetings, traveler. I have been searching the lands in hopes of finding someone capable of laying the foundation of a safe haven for anyone roaming the lands. If you proof that you can handle yourself in the wilds, I can gather a small group of nomads to follow your lead.",
-    "quest-foundvillage-start-obj": "Gathered grain: {0}/32\nGathered vegetables: {1}/16\nGathered meat: {2}/8\nKilled drifters: {3}/30",
+    "quest-foundvillage-start-obj": "Gathered grain: {0}/32\nGathered vegetables: {1}/16\nGathered meat: {2}/8\nKilled drifters: {3}/30\nPlaced farmer workstations: {4}/2\nPlaced trader workstations: {5}/1\nPlaced beds: {6}/3",
     "quest-foundvillage-1-title": "Collecting funds",
-    "quest-foundvillage-1-desc": "You did not think this would be cheap, did you? Founding a village can be quite costly",
-    "quest-foundvillage-1-obj": "Rusty gears: {0}/64",
-    "quest-foundvillage-2-title": "People have to eat",
-    "quest-foundvillage-2-desc": "The amount of food you gathered so far is mediocre at best. To actually make people stay with you, they must not be worried about starvation.",
-    "quest-foundvillage-2-obj": "Gathered grain: {0}/128\nGathered vegetables: {1}/64\nGathered meat: {2}/32",
+    "quest-foundvillage-1-desc": "You did not think this would be cheap, did you? Founding a village can be quite costly. On the plus side, this will enable us to hire some guards.",
+    "quest-foundvillage-1-obj": "Rusty gears: {0}/64\nPlaced soldier workstations: {1}/2\nPlaced beds: {2}/2",
+    "quest-foundvillage-2-title": "Treat the wounded",
+    "quest-foundvillage-2-desc": "Soldiers are great and all. But if they get hurt, we need someone capable of treating wounds in our ranks. These people create bandages and healing trinkes from herbs, so it might be good to have some around.",
+    "quest-foundvillage-2-obj": "Planted flowers: {0}/16\nPlaced herbalist workstations: {1}/1\nPlaced beds: {2}/1",
     "quest-foundvillage-3-title": "Enter the metal age",
-    "quest-foundvillage-3-desc": "Being able to eat is one thing. Being able to create the tools, weapons and armor to achieve a decent life in this world is another.",
-    "quest-foundvillage-3-obj": "Gathered bronze ingots: {0}/32\nGathered charcoal: {1}/64\nGathered leather: {2}/32",
+    "quest-foundvillage-3-desc": "Next we need a worker to create the tools, weapons and armor. A smith will come in handy on many occasions.",
+    "quest-foundvillage-3-obj": "Gathered bronze ingots: {0}/8\nGathered charcoal: {1}/16\nGathered leather: {2}/8\nPlaced smith workstations: {3}/1\nPlaced beds: {4}/1",
     "quest-foundvillage-final-title": "Emerge from the ashes",
     "quest-foundvillage-final-desc": "More and more people gain hope that this outpost could actually be made to last. To really gain their trust, proof that even the strongest beings from the rustworld do not stand a chance against you.",
-    "quest-foundvillage-final-obj": "Double headed drifters killed: {0}/1\nNightmare drifters killed: {1}/10\nSawblade locusts killed: {2}/5",
+    "quest-foundvillage-final-obj": "Nightmare drifters killed: {0}/10\nPlaced soldier workstations: {1}/1\nPlaced beds: {2}/1",
     "quest-recruitvillager-title": "At your service",
     "quest-recruitvillager-desc": "For a small amount of gears I can escort and protect you for a day.",
     "quest-recruitvillager-obj": "Rusty gears: {0}/1",
