--- a/resources/assets/vsvillage/lang/en.json
+++ b/resources/assets/vsvillage/lang/en.json
@@ -32,6 +32,9 @@
     "itemdesc-villagerhorn": "Can be used to call for help",
     "interact-villager-horn": "Aim at the ground nearby and blow it to call for help by freeing a villager from the rust world!",
 
+    "villagerguide-title": "Villages and Villagers",
+    "villagerguide-text": "<strong>Villages and Villagers</strong>\n\nYou can come across villages while travelling the world. The people roaming these villages are generally friendly as long as not provoked. Some will trade with you, others might be able to protect you from evil foes. Most of them will carry out some small tasks during the day depending on their profession.\n\nThere is also the possibility to found your own village. All you need is to craft a <a href=\"handbook://item-vsvillage:villagerhorn\">horn</a> and blow it to summon a villager. If you have <a href=\"https://mods.vintagestory.at/vsquest\">VS Quest</a> installed, you will even be able to accept missions from various villagers. VS Quest will also be useful for populating villages, as it also enables a new type of villager, the mayor, who will help you get everything up and running for your village.\n\nOnce you summoned a couple of villagers, you will need to provide shelter for them. Each villager wants to have a bed to sleep in during the night and a <a href=\"handbooksearch://workstation\">work station</a> for staying busy during the day.\nYour villagers also like to gather at a <a href=\"handbook://block-vsvillage:brazier-extinct\">fire place</a> during the evening to do some socializing.",
+
     "block-workstation-soldier-*": "Workstation (soldier)",
     "block-workstation-smith-*": "Workstation (smith)",
     "block-workstation-farmer-*": "Workstation (farmer)",
