--- a/resources/assets/vsvillage/lang/en.json
+++ b/resources/assets/vsvillage/lang/en.json
@@ -49,49 +49,70 @@
     "command-follow": "Follow me!",
 
     "quest-gatherMeatForSeed-title": "Meat for seed",
-    "quest-gatherMeatForSeed-desc": "My diet could use a little bit more variation. If you provide 20 meat of any kind, I could offer you some seeds in return.",
-    "quest-gatherMeatForSeed-obj": "Gathered meat: {0}/20",
-    "quest-gainzOverGrains-title": "Gainz over grains",
-    "quest-gainzOverGrains-desc": "My diet could use a little bit more variation. If you provide 20 meat of any kind, I could offer you some grain in return.",
-    "quest-gainzOverGrains-obj": "Gathered meat: {0}/20",
-    "quest-gather20MeatFor4FlaxSeeds-title": "There is no protein in flax fibre",
-    "quest-gather20MeatFor4FlaxSeeds-desc": "My diet could use a little bit more variation. If you provide 20 meat of any kind, I could offer you some seeds in return.",
-    "quest-gather20MeatFor4FlaxSeeds-obj": "Gathered meat: {0}/20",
-    "quest-gather20MeatFor4ParsnipSeeds-title": "There is no protein in parsnips",
-    "quest-gather20MeatFor4ParsnipSeeds-desc": "My diet could use a little bit more variation. If you provide 20 meat of any kind, I could offer you some seeds in return.",
-    "quest-gather20MeatFor4ParsnipSeeds-obj": "Gathered meat: {0}/20",
-    "quest-gather20MeatFor4TurnipSeeds-title": "There is no protein in turnips",
-    "quest-gather20MeatFor4TurnipSeeds-desc": "My diet could use a little bit more variation. If you provide 20 meat of any kind, I could offer you some in return.",
-    "quest-gather20MeatFor4TurnipSeeds-obj": "Gathered meat: {0}/20",
-    "quest-gather20MeatFor4CarrotSeeds-title": "There is no protein in carrots",
-    "quest-gather20MeatFor4CarrotSeeds-desc": "My diet could use a little bit more variation. If you provide 20 meat of any kind, I could offer you some seeds in return.",
-    "quest-gather20MeatFor4CarrotSeeds-obj": "Gathered meat: {0}/20",
-    "quest-gather20MeatFor4OnionSeeds-title": "There is no protein in onions",
-    "quest-gather20MeatFor4OnionSeeds-desc": "My diet could use a little bit more variation. If you provide 20 meat of any kind, I could offer you some seeds in return.",
-    "quest-gather20MeatFor4OnionSeeds-obj": "Gathered meat: {0}/20",
-    "quest-gather20MeatFor4SpeltSeeds-title": "There is no protein in grain",
-    "quest-gather20MeatFor4SpeltSeeds-desc": "My diet could use a little bit more variation. If you provide 20 meat of any kind, I could offer you some seeds in return.",
-    "quest-gather20MeatFor4SpeltSeeds-obj": "Gathered meat: {0}/20",
-    "quest-cull10HaresFor5Carrots-title": "Hare problem",
-    "quest-cull10HaresFor5Carrots-desc": "Those horrible hares keep eating my crops. Get rid of them and I'll share some carrots with you.",
-    "quest-cull10HaresFor5Carrots-obj": "Hares killed: {0}/10",
-    "quest-cull10HaresFor5Spelt-title": "Hare problem",
-    "quest-cull10HaresFor5Spelt-desc": "Those horrible hares keep eating my crops. Get rid of them and I'll share some spelt with you.",
-    "quest-cull10HaresFor5Spelt-obj": "Hares killed: {0}/10",
+    "quest-gatherMeatForSeed-desc": "My diet could use a little bit more variation. If you provide 25 meat of any kind, I could offer you some seeds in return.",
+    "quest-gatherMeatForSeed-obj": "Gathered meat: {0}/25",
+    "quest-gatherMeatForGrain-title": "Gainz over grains",
+    "quest-gatherMeatForGrain-desc": "My diet could use a little bit more variation. If you provide 20 meat of any kind, I could offer you some grain in return.",
+    "quest-gatherMeatForGrain-obj": "Gathered meat: {0}/25",
+    "quest-gather10MeatFor4FlaxSeeds-title": "There is no protein in flax fibre",
+    "quest-gather10MeatFor4FlaxSeeds-desc": "My diet could use a little bit more variation. If you provide 10 meat of any kind, I could offer you some seeds in return.",
+    "quest-gather10MeatFor4FlaxSeeds-obj": "Gathered meat: {0}/10",
+    "quest-gather10MeatFor4ParsnipSeeds-title": "There is no protein in parsnips",
+    "quest-gather10MeatFor4ParsnipSeeds-desc": "My diet could use a little bit more variation. If you provide 10 meat of any kind, I could offer you some seeds in return.",
+    "quest-gather10MeatFor4ParsnipSeeds-obj": "Gathered meat: {0}/10",
+    "quest-gather10MeatFor4TurnipSeeds-title": "There is no protein in turnips",
+    "quest-gather10MeatFor4TurnipSeeds-desc": "My diet could use a little bit more variation. If you provide 10 meat of any kind, I could offer you some in return.",
+    "quest-gather10MeatFor4TurnipSeeds-obj": "Gathered meat: {0}/10",
+    "quest-gather10MeatFor4CarrotSeeds-title": "There is no protein in carrots",
+    "quest-gather10MeatFor4CarrotSeeds-desc": "My diet could use a little bit more variation. If you provide 10 meat of any kind, I could offer you some seeds in return.",
+    "quest-gather10MeatFor4CarrotSeeds-obj": "Gathered meat: {0}/10",
+    "quest-gather10MeatFor4OnionSeeds-title": "There is no protein in onions",
+    "quest-gather10MeatFor4OnionSeeds-desc": "My diet could use a little bit more variation. If you provide 10 meat of any kind, I could offer you some seeds in return.",
+    "quest-gather10MeatFor4OnionSeeds-obj": "Gathered meat: {0}/10",
+    "quest-gather10MeatFor4SpeltSeeds-title": "There is no protein in grain",
+    "quest-gather10MeatFor4SpeltSeeds-desc": "My diet could use a little bit more variation. If you provide 10 meat of any kind, I could offer you some seeds in return.",
+    "quest-gather10MeatFor4SpeltSeeds-obj": "Gathered meat: {0}/10",
+    "quest-cull2HaresFor20Carrots-title": "Hare problem",
+    "quest-cull2HaresFor20Carrots-desc": "Those horrible hares keep eating my crops. Get rid of them and I'll share some carrots with you.",
+    "quest-cull212HaresFor20Carrots-obj": "Hares killed: {0}/2",
+    "quest-cull2HaresFor20Spelt-title": "Hare problem",
+    "quest-cull2HaresFor20Spelt-desc": "Those horrible hares keep eating my crops. Get rid of them and I'll share some spelt with you.",
+    "quest-cull2HaresFor20Spelt-obj": "Hares killed: {0}/2",
+    "quest-sell1CheesewheelFor4Gears-title": "Would love cheese for my bread",
+    "quest-sell1CheesewheelFor4Gears-desc": "I made some gears from a passing traveler. I would be happy to buy some cheese from you if you have a wheel spare.",
+    "quest-sell1CheesewheelFor4Gears-obj": "Gathered wheel of cheese: {0}/1",
 
-    "quest-gather20CharcoalFor3Gears-title": "The forge stays cold today",
-    "quest-gather20CharcoalFor3Gears-desc": "I want to produce some new iron tools but forgot to prepare the charcoal. Can you help me gather some coal for me? I could pay you.",
-    "quest-gather20CharcoalFor3Gears-obj": "Gathered charcoal: {0}/20",
+    "quest-gather12CharcoalFor4Gears-title": "The forge stays cold today",
+    "quest-gather12CharcoalFor4Gears-desc": "I want to produce some new iron tools but forgot to prepare the charcoal. Can you help me gather some coal for me? I could pay you.",
+    "quest-gather12CharcoalFor4Gears-obj": "Gathered charcoal: {0}/12",
     "quest-buy1BlackGuardSword-title": "Creating a weapon of great power",
     "quest-buy1BlackGuardSword-desc": "If you hand me the materials as well as some payment for my work, I could create a weapon of exceptional quality for you.",
-    "quest-buy1BlackGuardSword-obj": "Gathered iron ingots: {0}/1\nGathered charcoal: {1}/1\nGathered rusty gears: {2}/5",
+    "quest-buy1BlackGuardSword-obj": "Gathered iron ingots: {0}/1\nGathered charcoal: {1}/1\nGathered rusty gears: {2}/4",
+    "quest-upgradeGambison-title": "Upgrading your gambison",
+    "quest-upgradeGambison-desc": "With payment and a set of gambison I could tailor it to fit you better I reckon.",
+    "quest-upgradeGambison-obj": "Gambison head: {0}/1\nGambison body: {1}/1\nGambison legs: {2}/1\nGathered rusty gears: {3}/32",
 
-    "quest-kill6WolvesFor2Gears-title": "Protect the cattle",
-    "quest-kill6WolvesFor2Gears-desc": "The wolves are loosing their respect for fire. They are getting closer and closer to the cattle I am herding. I can compensate you if you fend them off.",
-    "quest-kill6WolvesFor2Gears-obj": "Killed wolves: {0}/6",
-    "quest-kill6FoxesFor1Gear-title": "Protect the chicken",
-    "quest-kill6FoxesFor1Gear-desc": "Recently a fox broke into my chicken coop and decimated my lifestock. I do not want this to happen again. If anyone is able to hunt down six of these foxes I would be willing to pay a gear for it.",
-    "quest-kill6FoxesFor1Gear-obj": "Killed foxes: {0}/6",
+    "quest-gather16HayFor1BlueCheesewheel-title": "Hay for blue cheesewheel",
+    "quest-gather16HayFor1BlueCheesewheel-desc": "I need help gathering Hay for the lifestock, gather 16 of it and I can share some cheese from my stockpile.",
+    "quest-gather16HayFor1BlueCheesewheel-obj": "Gathered Hay: {0}/16",
+    "quest-gather16HayFor1CheddarCheesewheel-title": "Hay for cheddar cheesewheel",
+    "quest-gather16HayFor1CheddarCheesewheel-desc": "I need help gathering Hay for the lifestock, gather 16 of it and I can share some cheese from my stockpile.",
+    "quest-gather16HayFor1CheddarCheesewheel-obj": "Gathered Hay: {0}/16",
+    "quest-gather6GrainFor12Eggs-title": "Grain for a dozen eggs",
+    "quest-gather6GrainFor12Eggs-desc": "My hens need more grain to keep up how many eggs they are laying. I will happliy give you a dozen eggs for some grain.",
+    "quest-gather6GrainFor12Eggs-obj": "Gathered Grain: {0}/6",
+    "quest-gather24GrainFor18Poultry-title": "Grain for chicken meat",
+    "quest-gather24GrainFor18Poultry-desc": "My chickens have grown old and fat. I need to make room for the younger generations to grow properly. For some simple grain I can offer you some meat.",
+    "quest-gather24GrainFor18Poultry-obj": "Gathered Grain: {0}/24",
+    "quest-gather24GrainFor18Redmeat-title": "Grain for red meat",
+    "quest-gather24GrainFor18Redmeat-desc": "My sheep have grown old and fat. I need to make room for the younger generations to grow properly. For some simple grain I can offer you some meat.",
+    "quest-gather24GrainFor18Redmeat-obj": "Gathered Grain: {0}/24",
+    "quest-kill2WolvesFor8Gears-title": "Protect the cattle",
+    "quest-kill2WolvesFor8Gears-desc": "The wolves are loosing their respect for fire. They are getting closer and closer to the cattle I am herding. I can compensate you if you fend them off.",
+    "quest-kill2WolvesFor8Gears-obj": "Killed wolves: {0}/2",
+    "quest-kill3FoxesFor8Gear-title": "Protect the chicken",
+    "quest-kill3FoxesFor8Gear-desc": "Recently a fox broke into my chicken coop and decimated my lifestock. I do not want this to happen again. If anyone is able to hunt down six of these foxes I would be willing to pay a gear for it.",
+    "quest-kill3FoxesFor8Gear-obj": "Killed foxes: {0}/3",
 
     "quest-kill30DriftersFor3Gears-title": "Shivers from another world",
     "quest-kill30DriftersFor3Gears-desc": "The woods simply aren't safe anymore. Drifters are everywhere. If you could clear the surrounding area from drifters, we could pay you a fair price.",
@@ -136,6 +157,25 @@
     "quest-recruitvillager-title": "At your service",
     "quest-recruitvillager-desc": "For a small amount of gears I can escort and protect you for a day.",
     "quest-recruitvillager-obj": "Rusty gears: {0}/1",
+
+    "quest-repairingAnOldSet1-title": "A new copper needle",
+    "quest-repairingAnOldSet1-desc": "I need a copper ingot for a new medical needle. I have an old set of armor that I can give you piece by piece if you keep working with me.",
+    "quest-repairingAnOldSet1-obj": "Gather ingot copper {0}/1",
+    "quest-repairingAnOldSet2-title": "Flaxtwine for holes",
+    "quest-repairingAnOldSet2-desc": "I need some flaxtwine to make bandages and to fix the hole in this armor set I'm giving to you.",
+    "quest-repairingAnOldSet2-obj": "Gather flaxtwine {0}/12",
+    "quest-repairingAnOldSet3-title": "Food for winter",
+    "quest-repairingAnOldSet3-desc": "If you can get me food for winter I will give you the last piece of the armor set I have.",
+    "quest-repairingAnOldSet3-obj": "Gather vegetables {0}/32",
+    "quest-sell24HorsetailFor3Gears-title": "A need for horsetails",
+    "quest-sell24HorsetailFor3Gears-desc": "Supplys are running low and I need some more horsetail, I can pay of cause.",
+    "quest-sell24HorsetailFor3Gears-obj": "Horstail gathered: {0}/24",
+    "quest-sell10PowderedSulfurFor2Gears-title": "A need for powdered sulfur",
+    "quest-sell10PowderedSulfurFor2Gears-desc": "Supplys are running low and I need some more powdered sulfur, I can pay of cause.",
+    "quest-sell10PowderedSulfurFor2Gears-obj": "Powdered sulfur gathered: {0}/10",
+    "quest-healplayersetup-title": "Supply setup before healing",
+    "quest-healplayersetup-desc": "To be able to act as your healer I require some basic things. Stuff for bandages, a stone and stick for crushing herbs and honeycomb to treat wounds. I can become self sufficient after you get me these starting things.",
+    "quest-healplayersetup-obj": "Gathered horsetail: {0}/12\nGathered stone: {1}/1\nGathered stick: {2}/1\nGathered honeycomb: {3}/1\nGathered cattails: {0}/12",
     "quest-healplayer-title": "A visit at the doc",
     "quest-healplayer-desc": "If you ever take a beating, I am able to take a look at your wounds.",
     "quest-healplayer-obj": ""
