update patches and quests

--- a/resources/assets/vsvillage/lang/de.json
+++ b/resources/assets/vsvillage/lang/de.json
@@ -1,6 +1,8 @@
 {
     "item-creature-humanoid-villager-male-soldier": "Soldat (männlich)",
     "item-creature-humanoid-villager-female-soldier": "Soldat (weiblich)",
+    "item-creature-humanoid-villager-male-archer": "Bogenschütze (männlich)",
+    "item-creature-humanoid-villager-female-archer": "Bogenschütze (weiblich)",
     "item-creature-humanoid-villager-male-smith": "Schmied (männlich)",
     "item-creature-humanoid-villager-female-smith": "Schmied (weiblich)",
     "item-creature-humanoid-villager-male-farmer": "Bauer (männlich)",
