--- a/resources/assets/vsvillage/lang/en.json
+++ b/resources/assets/vsvillage/lang/en.json
@@ -1,6 +1,8 @@
 {
     "item-creature-humanoid-villager-male-soldier": "Soldier (male)",
     "item-creature-humanoid-villager-female-soldier": "Soldier (female)",
+    "item-creature-humanoid-villager-male-archer": "Archer (male)",
+    "item-creature-humanoid-villager-female-archer": "Archer (female)",
     "item-creature-humanoid-villager-male-smith": "Smith (male)",
     "item-creature-humanoid-villager-female-smith": "Smith (female)",
     "item-creature-humanoid-villager-male-farmer": "Farmer (male)",
@@ -15,6 +17,8 @@
     "item-creature-humanoid-villager-female-trader": "Trader (female)",
     "item-dead-creature-humanoid-villager-male-soldier": "Dead Soldier (male)",
     "item-dead-creature-humanoid-villager-female-soldier": "Dead Soldier (female)",
+    "item-dead-creature-humanoid-villager-male-archer": "Dead Archer (male)",
+    "item-dead-creature-humanoid-villager-female-archer": "Dead Archer (female)",
     "item-dead-creature-humanoid-villager-male-smith": "Dead Smith (male)",
     "item-dead-creature-humanoid-villager-female-smith": "Dead Smith (female)",
     "item-dead-creature-humanoid-villager-male-farmer": "Dead Farmer (male)",
@@ -109,6 +113,9 @@
     "quest-recruit1soldier-title": "More protectors for the village",
     "quest-recruit1soldier-desc": "If you can provide shelter, a workplace and a little bit of payment, I am able to recruit one more soldier to the village.",
     "quest-recruit1soldier-obj": "Rusty gears: {0}/8\nWorksations placed: {1}/1\nBeds placed: {2}/1",
+    "quest-recruit1archer-title": "Keep them at distance",
+    "quest-recruit1archer-desc": "If you can provide shelter, a workplace and a little bit of payment, I am able to recruit one more archers to the village.",
+    "quest-recruit1archer-obj": "Rusty gears: {0}/8\nWorksations placed: {1}/1\nBeds placed: {2}/1",
     "quest-recruit1smith-title": "More smiths creating tools and weapons",
     "quest-recruit1smith-desc": "If you can provide shelter, a workplace and a little bit of payment, I am able to recruit a smith to the village.",
     "quest-recruit1smith-obj": "Rusty gears: {0}/6\nWorksations placed: {1}/1\nBeds placed: {2}/1",
