try to fix some of the quests

--- a/resources/assets/vsvillage/lang/en.json
+++ b/resources/assets/vsvillage/lang/en.json
@@ -78,7 +78,7 @@
     "quest-gather10MeatFor4SpeltSeeds-obj": "Gathered meat: {0}/10",
     "quest-cull2HaresFor20Carrots-title": "Hare problem",
     "quest-cull2HaresFor20Carrots-desc": "Those horrible hares keep eating my crops. Get rid of them and I'll share some carrots with you.",
-    "quest-cull212HaresFor20Carrots-obj": "Hares killed: {0}/2",
+    "quest-cull2HaresFor20Carrots-obj": "Hares killed: {0}/2",
     "quest-cull2HaresFor20Spelt-title": "Hare problem",
     "quest-cull2HaresFor20Spelt-desc": "Those horrible hares keep eating my crops. Get rid of them and I'll share some spelt with you.",
     "quest-cull2HaresFor20Spelt-obj": "Hares killed: {0}/2",
@@ -118,25 +118,25 @@
     "quest-kill3FoxesFor8Gear-desc": "Recently a fox broke into my chicken coop and decimated my lifestock. I do not want this to happen again. If anyone is able to hunt down six of these foxes I would be willing to pay a gear for it.",
     "quest-kill3FoxesFor8Gear-obj": "Killed foxes: {0}/3",
 
-    "quest-kill30DriftersFor3Gears-title": "Shivers from another world",
-    "quest-kill30DriftersFor3Gears-desc": "The woods simply aren't safe anymore. Drifters are everywhere. If you could clear the surrounding area from drifters, we could pay you a fair price.",
-    "quest-kill30DriftersFor3Gears-obj": "Killed drifters: {0}/30",
-    "quest-kill8NightmareDriftersFor5Gears-title": "The growling from the unspeakable depths",
-    "quest-kill8NightmareDriftersFor5Gears-desc": "We can no longer extract minerals from the mountains because of the creatures that lurk in the caves deep down below. We would be willing to pay a generous price for anyone helping to clear the depths from nightmare drifters.",
-    "quest-kill8NightmareDriftersFor5Gears-obj": "Killed nightmare drifters: {0}/8",
+    "quest-kill50DriftersFor20Gears-title": "Shivers from another world",
+    "quest-kill50DriftersFor20Gears-desc": "The woods simply aren't safe anymore. Drifters are everywhere. If you could clear the surrounding area from drifters, we could pay you a fair price.",
+    "quest-kill50DriftersFor20Gears-obj": "Killed drifters: {0}/50",
+    "quest-kill2NightmareDriftersFor12Gears-title": "The growling from the unspeakable depths",
+    "quest-kill2NightmareDriftersFor12Gears-desc": "We can no longer extract minerals from the mountains because of the creatures that lurk in the caves deep down below. We would be willing to pay a generous price for anyone helping to clear the depths from nightmare drifters.",
+    "quest-kill2NightmareDriftersFor12Gears-obj": "Killed nightmare drifters: {0}/12",
     
     "quest-recruit1farmer-title": "More farmers on the fields",
     "quest-recruit1farmer-desc": "If you can provide shelter, a workplace and a little bit of payment, I am able to recruit one more farmer to the village.",
-    "quest-recruit1farmer-obj": "Rusty gears: {0}/4\nWorksations placed: {1}/1\nBeds placed: {2}/1",
+    "quest-recruit1farmer-obj": "Rusty gears: {0}/6\nWorksations placed: {1}/1\nBeds placed: {2}/1",
     "quest-recruit1shepherd-title": "More shepherds caring for the cattle",
     "quest-recruit1shepherd-desc": "If you can provide shelter, a workplace  and a little bit of payment, I am able to recruit one more shepherd to the village.",
-    "quest-recruit1shepherd-obj": "Rusty gears: {0}/4\nWorksations placed: {1}/1\nBeds placed: {2}/1",
+    "quest-recruit1shepherd-obj": "Rusty gears: {0}/6\nWorksations placed: {1}/1\nBeds placed: {2}/1",
     "quest-recruit1soldier-title": "More protectors for the village",
     "quest-recruit1soldier-desc": "If you can provide shelter, a workplace and a little bit of payment, I am able to recruit one more soldier to the village.",
-    "quest-recruit1soldier-obj": "Rusty gears: {0}/8\nWorksations placed: {1}/1\nBeds placed: {2}/1",
+    "quest-recruit1soldier-obj": "Rusty gears: {0}/12\nWorksations placed: {1}/1\nBeds placed: {2}/1",
     "quest-recruit1archer-title": "Keep them at distance",
     "quest-recruit1archer-desc": "If you can provide shelter, a workplace and a little bit of payment, I am able to recruit one more archers to the village.",
-    "quest-recruit1archer-obj": "Rusty gears: {0}/8\nWorksations placed: {1}/1\nBeds placed: {2}/1",
+    "quest-recruit1archer-obj": "Rusty gears: {0}/12\nWorksations placed: {1}/1\nBeds placed: {2}/1",
     "quest-recruit1smith-title": "More smiths creating tools and weapons",
     "quest-recruit1smith-desc": "If you can provide shelter, a workplace and a little bit of payment, I am able to recruit a smith to the village.",
     "quest-recruit1smith-obj": "Rusty gears: {0}/6\nWorksations placed: {1}/1\nBeds placed: {2}/1",
@@ -145,25 +145,25 @@
     "quest-recruit1herbalist-obj": "Rusty gears: {0}/6\nWorksations placed: {1}/1\nBeds placed: {2}/1",
     "quest-recruit1trader-title": "The art of the trade",
     "quest-recruit1trader-desc": "If you can provide shelter, a workplace and a little bit of payment, I am able to recruit a trader to the village.",
-    "quest-recruit1trader-obj": "Rusty gears: {0}/6\nWorksations placed: {1}/1\nBeds placed: {2}/1",
+    "quest-recruit1trader-obj": "Rusty gears: {0}/12\nWorksations placed: {1}/1\nBeds placed: {2}/1",
     "quest-foundvillage-start-title": "Civilization has been broken",
     "quest-foundvillage-start-desc": "Greetings, traveler. I have been searching the lands in hopes of finding someone capable of laying the foundation of a safe haven for anyone roaming the lands. If you proof that you can handle yourself in the wilds, I can gather a small group of nomads to follow your lead.",
-    "quest-foundvillage-start-obj": "Gathered grain: {0}/32\nGathered vegetables: {1}/16\nGathered meat: {2}/8\nKilled drifters: {3}/30\nPlaced farmer workstations: {4}/2\nPlaced trader workstations: {5}/1\nPlaced beds: {6}/3",
+    "quest-foundvillage-start-obj": "Gathered grain: {0}/20\nGathered vegetables: {1}/20\nGathered meat: {2}/10\nKilled drifters: {3}/30\nPlaced farmer workstations: {4}/2\nPlaced trader workstations: {5}/1\nPlaced beds: {6}/3",
     "quest-foundvillage-1-title": "Collecting funds",
     "quest-foundvillage-1-desc": "You did not think this would be cheap, did you? Founding a village can be quite costly. On the plus side, this will enable us to hire some guards.",
-    "quest-foundvillage-1-obj": "Rusty gears: {0}/64\nPlaced soldier workstations: {1}/2\nPlaced beds: {2}/2",
+    "quest-foundvillage-1-obj": "Rusty gears: {0}/32\nPlaced soldier workstations: {1}/2\nPlaced beds: {2}/2",
     "quest-foundvillage-2-title": "Treat the wounded",
     "quest-foundvillage-2-desc": "Soldiers are great and all. But if they get hurt, we need someone capable of treating wounds in our ranks. These people create bandages and healing trinkes from herbs, so it might be good to have some around.",
     "quest-foundvillage-2-obj": "Planted flowers: {0}/16\nPlaced herbalist workstations: {1}/1\nPlaced beds: {2}/1",
     "quest-foundvillage-3-title": "Enter the metal age",
     "quest-foundvillage-3-desc": "Next we need a worker to create the tools, weapons and armor. A smith will come in handy on many occasions.",
-    "quest-foundvillage-3-obj": "Gathered bronze ingots: {0}/8\nGathered charcoal: {1}/16\nGathered leather: {2}/8\nPlaced smith workstations: {3}/1\nPlaced beds: {4}/1",
+    "quest-foundvillage-3-obj": "Gathered bronze ingots: {0}/4\nGathered charcoal: {1}/16\nPlaced smith workstations: {2}/1\nPlaced beds: {3}/1",
     "quest-foundvillage-final-title": "Emerge from the ashes",
     "quest-foundvillage-final-desc": "More and more people gain hope that this outpost could actually be made to last. To really gain their trust, proof that even the strongest beings from the rustworld do not stand a chance against you.",
-    "quest-foundvillage-final-obj": "Nightmare drifters killed: {0}/10\nPlaced soldier workstations: {1}/1\nPlaced beds: {2}/1",
+    "quest-foundvillage-final-obj": "Nightmare drifters killed: {0}/1\nPlaced soldier workstations: {1}/1\nPlaced beds: {2}/1",
     "quest-recruitvillager-title": "At your service",
     "quest-recruitvillager-desc": "For a small amount of gears I can escort and protect you for a day.",
-    "quest-recruitvillager-obj": "Rusty gears: {0}/1",
+    "quest-recruitvillager-obj": "Rusty gears: {0}/2",
 
     "quest-repairingAnOldSet1-title": "A new copper needle",
     "quest-repairingAnOldSet1-desc": "I need a copper ingot for a new medical needle. I have an old set of armor that I can give you piece by piece if you keep working with me.",
@@ -182,7 +182,7 @@
     "quest-sell10PowderedSulfurFor2Gears-obj": "Powdered sulfur gathered: {0}/10",
     "quest-healplayersetup-title": "Supply setup before healing",
     "quest-healplayersetup-desc": "To be able to act as your healer I require some basic things. Stuff for bandages, a stone and stick for crushing herbs and honeycomb to treat wounds. I can become self sufficient after you get me these starting things.",
-    "quest-healplayersetup-obj": "Gathered horsetail: {0}/12\nGathered stone: {1}/1\nGathered stick: {2}/1\nGathered honeycomb: {3}/1\nGathered cattails: {0}/12",
+    "quest-healplayersetup-obj": "Gathered horsetail: {0}/12\nGathered stone: {1}/1\nGathered stick: {2}/1\nGathered honeycomb: {3}/2\nGathered cattails: {0}/12",
     "quest-healplayer-title": "A visit at the doc",
     "quest-healplayer-desc": "If you ever take a beating, I am able to take a look at your wounds.",
     "quest-healplayer-obj": ""
