--- a/resources/assets/vsvillage/lang/ja.json
+++ b/resources/assets/vsvillage/lang/ja.json
@@ -1,8 +1,9 @@
 {
-    "comment_description": "Japanese localization file for 'VS Village'.",
-    "comment_version": "Mod Version: v0.7.2",
-    "comment_author": "Translated By: Macoto Hino",
-    "comment_technical_details": "Machine translation using PCOT and DeepL.",
+	"comment_description" : "Japanese localization file for 'VS Village'.",
+	"comment_version" : "Mod Version: v0.7.2",
+    "comment_author" : "Translated By: Macoto Hino",
+    "comment_technical_details" : "Machine translation using PCOT and DeepL.",
+
     "item-creature-humanoid-villager-male-soldier": "兵士(男)",
     "item-creature-humanoid-villager-female-soldier": "兵士(女)",
     "item-creature-humanoid-villager-male-archer": "弓兵(男)",
@@ -40,7 +41,7 @@
     "itemdesc-villagerhorn": "助けを呼ぶことが出来る。",
     "interact-villager-horn": "近くの地面を狙って吹くと、錆びた世界から村人を解放する助けを呼ぶことが出来る！",
 
-    "villagerguide-title": "村と村人",
+    "villagerguide-title": "VS Village:村と村人",
     "villagerguide-text": "<strong>村と村人</strong>\n\n世界中を旅していると村を見付けることがある。これらの村に住む人々は、刺激しない限り、概して友好的です。ある者はあなたと交易し、またある者はあなたを邪悪な敵から守ってくれるかもしれません。彼らの多くは、職業に応じて日中に小さな仕事をしています。\n\nまた、自分だけの村を作ることも出来ます。 <a href=\"handbook://item-vsvillage:villagerhorn\">角笛</a>を作り、それを使って村人を呼び出すだけです。 <a href=\"https://mods.vintagestory.at/vsquest\">VS Quest</a>をインストールすれば、様々な村人からミッションを受けることも出来るようになります。 また、VS Questでは、村の運営を手伝ってくれる新しいタイプの村人「村長」も登場する為、村の人口増加に役立つことでしょう。\n\n村人を何人か呼び出したら、彼らの為に避難所を用意する必要があります。 村人たちはそれぞれ、夜寝る為のベッドと、日中忙しく過ごす為の<a href=\"handbooksearch://ワークステーション\">ワークステーション</a>が必要になります。\nまた、村人たちは夜になると<a href=\"handbook://block-vsvillage:brazier-extinct\">火鉢</a>に集まり、交流するのが好きです。",
 
     "block-workstation-soldier-*": "ワークステーション(兵士)",
