add village management gui

--- a/resources/assets/vsvillage/lang/en.json
+++ b/resources/assets/vsvillage/lang/en.json
@@ -47,10 +47,46 @@
     "block-workstation-mayor-*": "Workstation (mayor)",
     "block-workstation-trader-*": "Workstation (trader)",
 
+    "smith": "smith",
+    "farmer": "farmer",
+    "shepherd": "shepherd",
+    "mayor": "mayor",
+    "soldier": "soldier",
+    "herbalist": "herbalist",
+    "trader": "trader",
+    "bed": "bed",
+    "gatherplace": "gatherplace",
+
     "block-brazier-*": "Brazier",
 
     "command-stay": "Stay here!",
     "command-follow": "Follow me!",
+
+    "manage-village": "Manage Village",
+    "management-title": "Village Management",
+    "tab-management-residents": "Residents",
+    "tab-management-structures": "Structures",
+    "tab-management-stats": "Stats",
+    "tab-management-destroy": "Destroy",
+    "management-destroy-village-text": "Are you sure to permanently destroy this village?",
+    "management-destroy-village-button": "Destroy village",
+    "management-update-village-button": "Upate village",
+    "management-no-village-found": "This block is currently not connected to a village. Do you want to found a new one?",
+    "management-village-name": "Name:",
+    "management-village-radius": "Radius:",
+    "management-found-new-village": "Found new village",
+    "management-select-structure": "Select a structure.",
+    "management-remove-structure": "Remove structure",
+    "management-structure-note": "Structure type: {0}\nCurrently owned by {1}\nLocated at: {2}",
+    "management-select-villager": "Select a villager.",
+    "management-remove-villager": "Remove villager",
+    "management-villager-note": "Name: {0}\nProfession: {1}\nLast seen at: {2}\nWorks at: {3}\nSleeps at: {4}",
+    "management-emtpy": "The village seems to be empty.",
+    "lives-in": "Resident of {0}.",
+    "resides-in": "Belongs to {0}.",
+    "nobody": "nobody",
+    "everybody": "everybody",
+    "missing-in-action": "Missing in action",
 
     "tradingwindow-humanoid-villager-male-trader": "Village demand - {0} the supplier of useful stuff",
     "tradingwindow-humanoid-villager-female-trader": "Village demand - {0} the supplier of useful stuff",
