More village info

--- a/resources/assets/vsvillage/lang/en.json
+++ b/resources/assets/vsvillage/lang/en.json
@@ -82,7 +82,8 @@
     "management-remove-villager": "Remove villager",
     "management-villager-note": "Name: {0}\nProfession: {1}\nLast seen at: {2}\nWorks at: {3}\nSleeps at: {4}",
     "management-emtpy": "The village seems to be empty.",
-    "lives-in": "Resident of {0}.",
+    "lives-in": "Resident of {0}.\nWorks at: {1}\nSleeps at: {2}",
+    "nowhere": "nowhere",
     "resides-in": "Belongs to {0}.",
     "nobody": "nobody",
     "everybody": "everybody",
