First working prototype of new waypoint system

--- a/resources/assets/vsvillage/lang/en.json
+++ b/resources/assets/vsvillage/lang/en.json
@@ -58,6 +58,7 @@
     "gatherplace": "gatherplace",
 
     "block-brazier-*": "Brazier",
+    "block-waypoint": "Waypoint",
 
     "command-stay": "Stay here!",
     "command-follow": "Follow me!",
