make villagenames translatable

--- a/resources/assets/vsvillage/lang/en.json
+++ b/resources/assets/vsvillage/lang/en.json
@@ -38,7 +38,7 @@
 
     "villagerguide-title": "Villages and Villagers",
     "villagerguide-text": "<strong>Villages and Villagers</strong>\n\nYou can come across villages while travelling the world. The people roaming these villages are generally friendly as long as not provoked. Some will trade with you, others might be able to protect you from evil foes. Most of them will carry out some small tasks during the day depending on their profession.\n\nThere is also the possibility to found your own village. All you need is to craft a <a href=\"handbook://item-vsvillage:villagerhorn\">horn</a> and blow it to summon a villager. If you have <a href=\"https://mods.vintagestory.at/vsquest\">VS Quest</a> installed, you will even be able to accept missions from various villagers. VS Quest will also be useful for populating villages, as it also enables a new type of villager, the mayor, who will help you get everything up and running for your village.\n\nOnce you summoned a couple of villagers, you will need to provide shelter for them. Each villager wants to have a bed to sleep in during the night and a <a href=\"handbooksearch://workstation\">work station</a> for staying busy during the day.\nYour villagers also like to gather at a <a href=\"handbook://block-vsvillage:brazier-extinct\">fire place</a> during the evening to do some socializing.",
-
+    
     "block-workstation-soldier-*": "Workstation (soldier)",
     "block-workstation-smith-*": "Workstation (smith)",
     "block-workstation-farmer-*": "Workstation (farmer)",
@@ -46,9 +46,8 @@
     "block-workstation-herbalist-*": "Workstation (herbalist)",
     "block-workstation-mayor-*": "Workstation (mayor)",
     "block-workstation-trader-*": "Workstation (trader)",
-    
-    "block-villagebed-*": "Villager bed",
 
+    "block-villagebed-*": "Villager bed",
     "block-brazier-*": "Brazier",
     "block-waypoint": "Waypoint",
 
@@ -154,7 +153,7 @@
     "quest-kill2NightmareDriftersFor12Gears-title": "The growling from the unspeakable depths",
     "quest-kill2NightmareDriftersFor12Gears-desc": "We can no longer extract minerals from the mountains because of the creatures that lurk in the caves deep down below. We would be willing to pay a generous price for anyone helping to clear the depths from nightmare drifters.",
     "quest-kill2NightmareDriftersFor12Gears-obj": "Killed nightmare drifters: {0}/2",
-    
+
     "quest-recruit1farmer-title": "More farmers on the fields",
     "quest-recruit1farmer-desc": "If you can provide shelter, a workplace and a little bit of payment, I am able to recruit one more farmer to the village.",
     "quest-recruit1farmer-obj": "Rusty gears: {0}/6\nWorksations placed: {1}/1\nBeds placed: {2}/1",
@@ -215,5 +214,72 @@
     "quest-healplayersetup-obj": "Gathered horsetail: {0}/12\nGathered stone: {1}/1\nGathered stick: {2}/1\nGathered honeycomb: {3}/2\nGathered cattails: {0}/12",
     "quest-healplayer-title": "A visit at the doc",
     "quest-healplayer-desc": "If you ever take a beating, I am able to take a look at your wounds.",
-    "quest-healplayer-obj": ""
+    "quest-healplayer-obj": "",
+
+    "Woolhampton": "Woolhampton",
+    "Loxleigh": "Loxleigh",
+    "Blackington": "Blackington",
+    "Henwike": "Henwike",
+    "Northfold": "Northfold",
+    "Hartford": "Hartford",
+    "Eastholm": "Eastholm",
+    "Keldworth": "Keldworth",
+    "Westlea": "Westlea",
+    "Barmarsh": "Barmarsh",
+    "Keldbury": "Keldbury",
+    "Southpool": "Southpool",
+    "Newburgh": "Newburgh",
+    "Otterchester": "Otterchester",
+    "Overmoor": "Overmoor",
+    "Thorndon": "Thorndon",
+    "Oakbury": "Oakbury",
+    "Redhey": "Redhey",
+    "Market": "Market",
+    "Kirhurst": "Kirhurst",
+    "Hazelham": "Hazelham",
+    "Hindburn": "Hindburn",
+    "Northhurst": "Northhurst",
+    "Keldfield": "Keldfield",
+    "Loxdale": "Loxdale",
+    "Redwick": "Redwick",
+    "Woolwell": "Woolwell",
+    "Green": "Green",
+    "Newwick": "Newwick",
+    "Blackwick": "Blackwick",
+    "Thornhalgh": "Thornhalgh",
+    "Oulhall": "Oulhall",
+    "Northdale": "Northdale",
+    "Loxbury": "Loxbury",
+    "Foxden": "Foxden",
+    "Oakmoor": "Oakmoor",
+    "Kinhalgh": "Kinhalgh",
+    "Oakhurst": "Oakhurst",
+    "Guildholm": "Guildholm",
+    "Lower": "Lower",
+    "Northden": "Northden",
+    "Great": "Great",
+    "Hopmere": "Hopmere",
+    "Kinburn": "Kinburn",
+    "Oulholm": "Oulholm",
+    "Marsburn": "Marsburn",
+    "Middleley": "Middleley",
+    "Oakcaster": "Oakcaster",
+    "Lake": "Lake",
+    "Harthey": "Harthey",
+    "Whitemouth": "Whitemouth",
+    "Overwick": "Overwick",
+    "Kinwood": "Kinwood",
+    "Oakport": "Oakport",
+    "Heath": "Heath",
+    "Hartmere": "Hartmere",
+    "Northbury": "Northbury",
+    "Guildhey": "Guildhey",
+    "Ashhall": "Ashhall",
+    "Redport": "Redport",
+    "Little": "Little",
+    "Loxdon": "Loxdon",
+    "Hendon": "Hendon",
+    "Oxthwaite": "Oxthwaite",
+    "Portspool": "Portspool",
+    "Oakfold": "Oakfold"
 }
